# gtfs-olap

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
gtfs_olap/: CA.sql  config.py  queries.sql  rt.py  static.py
scripts/: run_rt_etl.py  run_static_etl.py
src/gtfs_olap/: __init__.py
src/gtfs_olap/common/: errors.py  http_client.py  logging_setup.py
src/gtfs_olap/config/: ddl.py  gtfs_schema.py  settings.py
src/gtfs_olap/db/: connection.py
src/gtfs_olap/rt_etl/: feed.py  pipeline.py  runner.py  schedule_cache.py
src/gtfs_olap/static_etl/: ckan.py  extract.py  load.py  transform.py  types.py
