[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs-olap"
version = "0.1.0"
description = "Kostka OLAP dla strumieni danych transportu publicznego GZM Metropolia"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "loguru>=0.7.0",
    "gtfs-realtime-bindings>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["gtfs_olap*"]
